--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,24 @@
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
 }
+
+body{
+  margin: 0;
+}
+
+body::before{
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 400px;
+  height: 200px;
+  clip-path: ellipse(100% 100% at 0% 0%);
+  background: linear-gradient(to bottom right, #ccffff 0%, #f3ecf3 100%);
+  z-index: -1;
+}
+
 .container {
   width: 100%;
   max-width: 1080px;
@@ -9,6 +27,7 @@
 }
 
 .intro {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -42,22 +61,25 @@ img {
   margin: 20px auto;
   width: 90%;
   border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
 }
 
 .stars {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 30px;
+  margin-bottom: 10px;
 }
 
 .stars i {
   color: orange;
 }
 
-.item-type {
-  text-align: center;
-  margin-top: 10px;
-}
 
 .feedback {
   display: flex;
@@ -120,6 +142,11 @@ img {
   }
   .item {
     width: 100%;
+    flex-direction: row;
+  }
+  .stars{
+    margin-right: 20px;
+    margin-bottom: 0;
   }
   .item:nth-child(1) {
     transform: translateX(-40px);
