--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,8 @@ h1 {
   color: #061826;
   text-align: center;
   padding: 0 40px;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 .intro-heading p {
@@ -128,6 +130,9 @@ img {
     flex-direction: row;
     justify-content: space-between;
     width: 90%;
+  }
+  h1{
+    font-size: 50px;
   }
   .intro-heading {
     width: 40%;
